# Ink2IndexAI

./: .dockerignore  .gitignore  Dockerfile  Ink2IndexAI.code-workspace  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py  pipeline_worker.py
backend/app/models/xgboost_ocr_model/: feature_columns.json  feature_importance.csv  metrics.json  pairwise_xgboost_ocr.json
backend/app/pipeline/: __init__.py  candidates.py  classifier.py  clustering.py  config.py  images.py  ocr_features.py  run_pipeline.py  storage.py  yolo_detector.py
backend/docs/: api.md  candidate_pair_layout.md
frontend/: README.md  index.html  package.json
