[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "ultralytics>=8.4.62",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.2.0",
]
